--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 services:
   db:
     image: mysql:8.0.33
-    restart: always
+    restart: unless-stopped
     environment:
       MYSQL_DATABASE: 'todo'
       MYSQL_USER: 'user'
@@ -14,5 +14,18 @@ services:
       - '3306'
     volumes:
       - my-db:/var/lib/mysql
+  todo:
+    image: todo:latest
+    restart: unless-stopped
+    environment:
+      DB_USER: 'user'
+      DB_PASSWORD: 'password'
+      DB_HOST: 'db:3306'
+      DB_NAME: 'todo'
+      PORT: 8080
+    ports:
+      - '8080:8080'
+    expose:
+      - '8080'
 volumes:
   my-db:
