replace Earthfile with multistage Dockerfile, fix Name parameter to be a string, add Readme, replace MySQL with PostgreSQL, rename handler, add postman collection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,29 @@
-version: '3.1'
 services:
   db:
-    image: mysql:8.0.33
-    restart: unless-stopped
-    environment:
-      MYSQL_DATABASE: 'todo'
-      MYSQL_USER: 'user'
-      MYSQL_PASSWORD: 'password'
-      MYSQL_ROOT_PASSWORD: 'password'
+    image: postgres:10-alpine
     ports:
-      - '3306:3306'
-    expose:
-      - '3306'
-    volumes:
-      - my-db:/var/lib/mysql
-  todo:
-    image: todo:latest
-    restart: unless-stopped
+      - "5432:5432"
     environment:
-      DB_USER: 'user'
-      DB_PASSWORD: 'password'
-      DB_HOST: 'db:3306'
-      DB_NAME: 'todo'
-      PORT: 8080
+      POSTGRES_USER: user1
+      POSTGRES_PASSWORD: changeme
+      POSTGRES_DB: tododb
+  admin:
+    image: adminer
+    restart: always
+    depends_on: 
+      - db
     ports:
-      - '8080:8080'
-    expose:
-      - '8080'
-volumes:
-  my-db:
+      - 8080:8080
+  # todo:
+  #   image: todo:latest
+  #   restart: unless-stopped
+  #   environment:
+  #     DB_USER: 'user'
+  #     DB_PASSWORD: 'password'
+  #     DB_HOST: 'db:3306'
+  #     DB_NAME: 'todo'
+  #     PORT: 8081
+  #   ports:
+  #     - '8081:8081'
+  #   expose:
+  #     - '8081'
